--- a/BackEnd/cfl-demo/client/listaDocumentos/documentos.html
+++ b/BackEnd/cfl-demo/client/listaDocumentos/documentos.html
@@ -17,8 +17,8 @@
     <input type="text" id="contenido">
     <p>Fecha</p>
     <input type="text" id="fecha">
-    <button id="agregar">Agregar Documento</button>
-    <button id="mostrar">Mostrar Documentos</button>
+    <button id="agregar">Agregar Documento</button><button id="mostrar">Mostrar Documentos</button><button id="autorMasDocu">Autor con Mas Documentos</button>
+    <p id="masDocument"></p>
     <ul id="lista">
 
     </ul>
