--- a/BackEnd/cfl-demo/client/index.html
+++ b/BackEnd/cfl-demo/client/index.html
@@ -12,6 +12,7 @@
   <a href="./climaWidget/clima.html"><button>Clima Tandil</button></a>
   <a href="./carrito/carritojson.html"><button>Carrito de Compras</button></a>
   <a href="./listaDocumentos/documentos.html"><button>ListaDocumentos</button></a>
+  <a href="./clientesEjercicio/cliente.html"><button>Datos Clientes</button></a>
 
 </body>
 </html>
