--- a/BackEnd/cfl-demo/client/carrito/carritojson.html
+++ b/BackEnd/cfl-demo/client/carrito/carritojson.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/carrito.css">
     <title>Document</title>
 </head>
 <body>
     
 <h1>Lista De Compras</h1>
-
-<input type="text" name="" value="" id="producto">
-<input type="text" name="" value="" id="precio">
-<button type="button" id="btnAgregar">Agregar</button>
-<button type="button" id=btnTotal>Sumar</button>
-<table>
-<thead>
-<td>Producto</td>
-<td>Precio</td>
-</thead>
-<tbody id="tblCompras"></tbody>
-</table>
+    <p id="parrafo">Producto</p><p id="parrafoDos">Precio</p>
+    <br>
+    <input type="text" name="" value="" id="producto"><input type="text" name="" value="" id="precio">
+    <button type="button" id="btnAgregar">Agregar</button>
+    <button type="button" id=btnTotal>Sumar</button>
+    <table>
+        <thead>
+            <td></td>
+            <td></td>
+        </thead>
+        <tbody id="tblCompras"></tbody>
+    </table>
 <div id="total"></div>
+<div id="app"></div>
 
+
+<hr>
 <a href="../index.html"><button>Index</button></a>
+</div>
+
 <script src="carritojson.js"></script>
 
 </body>
