--- a/BackEnd/cfl-demo/client/carrito/carritojson.html
+++ b/BackEnd/cfl-demo/client/carrito/carritojson.html
@@ -10,9 +10,9 @@
 <body>
     
 <h1>Lista De Compras</h1>
-    <p id="parrafo">Producto</p><p id="parrafoDos">Precio</p>
+    <p id="parrafoTres">Id</p><p id="parrafo">Producto</p><p id="parrafoDos">Precio</p>
     <br>
-    <input type="text" name="" value="" id="producto"><input type="text" name="" value="" id="precio">
+    <input type="text" name="" value="" id="id"><input type="text" name="" value="" id="producto"><input type="text" name="" value="" id="precio">
     <button type="button" id="btnAgregar">Agregar</button>
     <button type="button" id=btnTotal>Sumar</button>
     <table>
