--- a/BackEnd/cfl-demo/client/carrito/carritojson.html
+++ b/BackEnd/cfl-demo/client/carrito/carritojson.html
@@ -15,6 +15,7 @@
     <input type="text" name="" value="" id="id"><input type="text" name="" value="" id="producto"><input type="text" name="" value="" id="precio">
     <button type="button" id="btnAgregar">Agregar</button>
     <button type="button" id=btnTotal>Sumar</button>
+    <button id="buscar">Buscar</button>
     <table>
         <thead>
             <td></td>
@@ -24,6 +25,7 @@
     </table>
 <div id="total"></div>
 <div id="app"></div>
+<div id="container"></div>
 
 
 <hr>
